Add update for tab NewTransaction: Account, Time, Payee
Add update for tab NewTransaction: Account, Time, Payee

--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_new_transaction.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_new_transaction.xml
@@ -138,6 +138,7 @@
                             android:layout_weight="15"
                             android:background="@android:color/transparent"
                             android:gravity="right|center_vertical"
+                            android:singleLine="true"
                             android:textColor="@android:color/black"/>
 
                         <ImageView
@@ -339,7 +340,7 @@
                     android:weightSum="10">
 
                     <EditText
-                        android:id="@+id/etAmount"
+                        android:id="@+id/etIncomeAmount"
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_weight="8.8"
@@ -1153,7 +1154,7 @@
                         android:background="#504f4f"/>
 
                     <LinearLayout
-                        android:id="@+id/llTransferEvent"
+                        android:id="@+id/llAdjustmentEvent"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_margin="5dp"
@@ -1172,7 +1173,7 @@
                             android:textColor="@android:color/black"/>
 
                         <TextView
-                            android:id="@+id/tvTransferEvent"
+                            android:id="@+id/tvAdjustmentEvent"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="13"
