--- a/WalletAnalyzing/app/src/main/res/drawable/background_button_right_case.xml
+++ b/WalletAnalyzing/app/src/main/res/drawable/background_button_right_case.xml
@@ -3,7 +3,7 @@
 
     <item android:color="@color/colorPrimary" android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/background_gray"/>
+            <solid android:color="@color/background_main_frame"/>
             <stroke android:width="1dp"
                     android:color="@color/colorPrimary"/>
             <corners android:bottomLeftRadius="0dp"
