--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_category_add.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_category_add.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_gray"
+    android:background="@color/background_main_frame"
     android:orientation="vertical"
     android:paddingBottom="20dp"
     android:paddingLeft="10dp"
