--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_new_transaction_select_category.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_new_transaction_select_category.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/layout_account"
+    android:id="@+id/layout_select_category"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="20dp"
     android:paddingTop="10dp"
-    android:background="@color/background_gray">
+    android:background="@color/background_main_frame">
 
     <LinearLayout
         android:layout_width="match_parent"
