Add function for Transaction
Add function for Transaction

--- a/WalletAnalyzing/app/src/main/res/layout/action_bar_account_select_currency.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/action_bar_account_select_currency.xml
@@ -9,14 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="4">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/tvTitle"
@@ -24,18 +20,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:gravity="center"
-            android:text="@string/title_payee"
+            android:text="@string/title_account_select_currency"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold"/>
 
-        <ImageView
-            android:id="@+id/ivDone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="12dp"
-            android:scaleType="fitEnd"
-            android:src="@drawable/icon_done"/>
+
     </LinearLayout>
 </RelativeLayout>
