--- a/WalletAnalyzing/app/src/main/res/layout/action_bar_account_select.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/action_bar_account_select.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:gravity="center"
-            android:text="@string/title_account"
+            android:text="@string/title_account_select_type"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold"/>
