--- a/WalletAnalyzing/app/src/main/res/layout/action_bar_event.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/action_bar_event.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:gravity="center"
-            android:text="@string/title_payee"
+            android:text="@string/title_event"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold"/>
