--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_event.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_event.xml
@@ -11,14 +11,14 @@
     android:background="@android:color/white">
 
     <org.droidparts.widget.ClearableEditText
-        android:id="@+id/etPayee"
+        android:id="@+id/etEvent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/title_payee"
+        android:hint="@string/title_event"
         android:textColorHint="@color/textcolor_hint"/>
 
     <ListView
-        android:id="@+id/lvPayee"
+        android:id="@+id/lvEvent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@color/listview_divider"
