--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_transaction_date.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_transaction_date.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="@color/listview_parent_item_background"
         android:orientation="horizontal"
-        android:weightSum="5"
-        android:background="@color/transaction_date_background"
-        android:padding="5dp">
+        android:padding="5dp"
+        android:weightSum="5">
 
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
+
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="2dp"
+                android:layout_gravity="center"
                 android:background="@null"
                 android:scaleType="fitCenter"
-                android:src="@drawable/icon_date" >
+                android:src="@drawable/icon_date">
             </ImageButton>
 
             <TextView
@@ -33,7 +32,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:clickable="false"
-                android:text="30" >
+                android:text="30"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:textSize="16sp">
             </TextView>
         </FrameLayout>
 
@@ -42,24 +44,24 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tvDate1"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="Hom nay"
-                android:textStyle="bold"
-                android:textColor="@android:color/black"
-                android:gravity="center_vertical"/>
+                android:textColor="@android:color/black"/>
+
             <TextView
                 android:id="@+id/tvDate2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="04/01"
-                android:textStyle="bold"
-                android:textColor="@android:color/black"
-                android:gravity="center_vertical"/>
+                android:textColor="@android:color/black"/>
         </LinearLayout>
 
         <LinearLayout
@@ -67,28 +69,31 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tvIncome"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:gravity="center_vertical|right"
                 android:text="Thu: 1.000.000"
-                android:textStyle="bold"
-                android:textColor="@android:color/black"
-                android:gravity="center_vertical|right"/>
+                android:textColor="@color/textcolor_income"
+                android:textStyle="bold"/>
+
             <TextView
-                android:id="@+id/tvOutcome"
+                android:id="@+id/tvExpense"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:gravity="center_vertical|right"
                 android:text="Chi: 1.000.000"
-                android:textStyle="bold"
                 android:textColor="@android:color/black"
-                android:gravity="center_vertical|right"/>
+                android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>
 
     <ListView
+        android:id="@+id/lvTransactionDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
