--- a/WalletAnalyzing/app/src/main/res/layout/action_bar_with_button_done.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/action_bar_with_button_done.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="12dp"
-            android:scaleType="fitCenter"
+            android:scaleType="fitEnd"
             android:src="@drawable/icon_done"/>
 
     </LinearLayout>
