--- a/WalletAnalyzing/app/src/main/res/layout/action_bar_with_spinner.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/action_bar_with_spinner.xml
@@ -10,7 +10,7 @@
               android:weightSum="2">
 
     <Spinner
-        android:id="@+id/spinnerTransactionType"
+        android:id="@+id/spinner"
         style="@style/mySpinnerStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
