--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_transaction_date.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_transaction_date.xml
@@ -60,7 +60,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="04/01"
+                android:text="04/2016"
                 android:textColor="@android:color/black"/>
         </LinearLayout>
 
@@ -68,7 +68,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/tvIncome"
