--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_transaction_date.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_transaction_date.xml
@@ -93,10 +93,15 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ListView
+    <LinearLayout
+        android:id="@+id/llTransactionDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"/>
+    <!--<ListView
         android:id="@+id/lvTransactionDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:cacheColorHint="@android:color/transparent"/>
+        android:cacheColorHint="@android:color/transparent"/>-->
 </LinearLayout>
