--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_account.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_account.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="?attr/actionBarSize">
+    android:paddingBottom="?attr/actionBarSize"
+    android:background="@color/background_main_frame">
 
     <ListView
         android:id="@+id/lvAccount"
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
         android:cacheColorHint="@android:color/transparent"
         android:divider="@color/listview_divider"
-        android:dividerHeight="0.5dp"/>
+        android:dividerHeight="0.2dp"/>
 
     <!-- Here is the view to show if the list is emtpy -->
     <TextView
