--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_currency.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_currency.xml
@@ -6,17 +6,9 @@
               android:gravity="center_vertical"
               android:orientation="horizontal"
               android:paddingBottom="10dp"
-              android:paddingLeft="5dp"
+              android:paddingLeft="20dp"
               android:paddingRight="5dp"
               android:paddingTop="10dp">
-
-    <ImageView
-        android:id="@+id/ivIcon"
-        android:layout_width="0dp"
-        android:layout_height="30dp"
-        android:layout_weight="1"
-        android:scaleType="fitCenter"
-        android:src="@drawable/currency_jpy"/>
 
     <TextView
         android:id="@+id/tvType"
@@ -24,7 +16,7 @@
         android:layout_height="match_parent"
         android:layout_weight="5"
         android:gravity="center_vertical"
-        android:text="@string/account_type_cash"
+        android:text="@string/currency_vnd"
         android:textColor="@android:color/black"
         android:textStyle="bold"/>
 
