--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_transaction_date.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_transaction_date.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,8 +23,7 @@
                 android:layout_gravity="center"
                 android:background="@null"
                 android:scaleType="fitCenter"
-                android:src="@drawable/icon_date">
-            </ImageButton>
+                android:src="@drawable/icon_date"></ImageButton>
 
             <TextView
                 android:id="@+id/tvDate"
@@ -34,9 +33,8 @@
                 android:clickable="false"
                 android:text="30"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:textSize="16sp">
-            </TextView>
+                android:textSize="16sp"
+                android:textStyle="bold"></TextView>
         </FrameLayout>
 
         <LinearLayout
@@ -52,7 +50,7 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="Hom nay"
-                android:textColor="@android:color/black"/>
+                android:textColor="@android:color/black" />
 
             <TextView
                 android:id="@+id/tvDate2"
@@ -61,35 +59,38 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="04/2016"
-                android:textColor="@android:color/black"/>
+                android:textColor="@android:color/black" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:orientation="vertical"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical|right"
+            android:orientation="vertical">
+
 
             <TextView
                 android:id="@+id/tvIncome"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical|right"
-                android:text="Thu: 1.000.000"
+                android:text="Thu: 1.000.000 ₫"
                 android:textColor="@color/textcolor_income"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
 
             <TextView
                 android:id="@+id/tvExpense"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical|right"
-                android:text="Chi: 1.000.000"
+                android:text="Chi: 1.000.000 ₫"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
         </LinearLayout>
     </LinearLayout>
 
@@ -97,7 +98,7 @@
         android:id="@+id/llTransactionDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"/>
+        android:orientation="vertical" />
     <!--<ListView
         android:id="@+id/lvTransactionDetail"
         android:layout_width="match_parent"
